// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add.vue renders correctly 1`] = `
<div>
   
  <div>
    
    Versuche, ein neues Wort zu bilden, indem du einen Buchstaben hinzufügst.
  
  </div>
   
  <div
    class="word-container flex-item flex-col flex-center flex-flex"
    id="word-container"
  >
    <div
      class="flex-item flex-row flex-center"
    >
      <div
        class="word-char card locked"
        id="word-char-0"
      >
        
        A
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-1"
      >
        
        D
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-2"
      >
        
        L
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-3"
      >
        
        E
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-4"
      >
        
        R
      
      </div>
       
      <div />
    </div>
     
    <div
      class="svg-container"
    >
      <svg
        class="svg-item"
      >
        <defs>
          <marker
            id="arrowhead"
            markerHeight="6"
            markerWidth="6"
            orient="auto"
            refX="1"
            refY="5"
            viewBox="0 0 10 10"
          >
            <path
              d="M 0 5 L 10 0 L 10 10 z"
            />
          </marker>
        </defs>
         
        <line
          fill="transparent"
          id="arrow-0"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-1"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-2"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-3"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-4"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
        <line
          fill="transparent"
          id="arrow-5"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="3"
          x1="0"
          x2="0"
          y1="10"
          y2="50"
        />
         
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-0"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-1"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-2"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-3"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-4"
          width="40"
          x="-20"
          y="-10"
        />
        <rect
          fill="transparent"
          height="0"
          id="rect-around-arrow-5"
          width="40"
          x="-20"
          y="-10"
        />
      </svg>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch flex-wrap"
  >
    <itemselection-stub
      items="[object Object],[object Object],[object Object]"
    />
     
    <undo-stub />
  </div>
</div>
`;

exports[`Change.vue renders correctly 1`] = `
<div>
   
  <div>
    
    Versuche, ein neues Wort zu bilden, indem du einen Buchstaben änderst.
  
  </div>
   
  <div
    class="word-container flex-item flex-row flex-center"
    id="word-container"
  >
    <div>
      <div
        class="word-char card"
        id="word-char-0"
      >
        
        A
      
      </div>
    </div>
    <div>
      <div
        class="word-char card"
        id="word-char-1"
      >
        
        D
      
      </div>
    </div>
    <div>
      <div
        class="word-char card"
        id="word-char-2"
      >
        
        L
      
      </div>
    </div>
    <div>
      <div
        class="word-char card"
        id="word-char-3"
      >
        
        E
      
      </div>
    </div>
    <div>
      <div
        class="word-char card"
        id="word-char-4"
      >
        
        R
      
      </div>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch flex-wrap"
  >
    <itemselection-stub
      items="[object Object],[object Object],[object Object]"
    />
     
    <undo-stub />
  </div>
</div>
`;

exports[`Remove.vue renders correctly 1`] = `
<div>
   
  <div>
    
    Versuche, ein neues Wort zu bilden, indem du einen Buchstaben entfernst.
  
  </div>
   
  <div
    class="word-container flex-item flex-row flex-center"
    id="word-container"
  >
    <div>
      <div
        class="word-char card clickable"
        draggable="true"
        id="word-char-0"
      >
        
        A
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable"
        draggable="true"
        id="word-char-1"
      >
        
        D
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable"
        draggable="true"
        id="word-char-2"
      >
        
        L
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable"
        draggable="true"
        id="word-char-3"
      >
        
        E
      
      </div>
    </div>
    <div>
      <div
        class="word-char card clickable"
        draggable="true"
        id="word-char-4"
      >
        
        R
      
      </div>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch"
  >
    <trashcan-stub />
     
    <undo-stub />
  </div>
</div>
`;

exports[`Swap.vue renders correctly 1`] = `
<div>
   
  <difficulty-stub
    difficultylevels="2"
    selected="1"
  />
   
  <div>
    
    Versuche, ein sinnvolles Wort zu bilden, indem du
    
    <b>
      einmal
    </b>
     
    <!---->
    
    zwei Buchstaben vertauschst.
  
  </div>
   
  <div
    class="word-container flex-item flex-col flex-center flex-flex"
    id="word-container"
  >
    <div
      class="flex-item flex-row flex-center"
    >
      <div
        class="word-char card locked"
        id="word-char-0"
      >
        
        D
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-1"
      >
        
        A
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-2"
      >
        
        L
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-3"
      >
        
        E
      
      </div>
      <div
        class="word-char card locked"
        id="word-char-4"
      >
        
        R
      
      </div>
    </div>
     
    <div
      class="svg-container"
    >
      <svg
        class="svg-item"
      >
        <defs>
          <marker
            id="arrowhead"
            markerHeight="6"
            markerWidth="6"
            orient="auto"
            refX="0"
            refY="5"
            viewBox="0 0 10 10"
          >
            <path
              d="M 10 0 L 0 5 L 10 10 z"
            />
          </marker>
           
          <marker
            id="arrowtail"
            markerHeight="6"
            markerWidth="6"
            orient="auto"
            refX="9"
            refY="5"
            viewBox="0 0 10 10"
          >
            <path
              d="M 0 0 L 10 5 L 0 10 z"
            />
          </marker>
        </defs>
         
        <path
          fill="transparent"
          id="arrow-0-1"
          marker-end="url(#arrowtail)"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="2"
        />
        <path
          fill="transparent"
          id="arrow-1-2"
          marker-end="url(#arrowtail)"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="2"
        />
        <path
          fill="transparent"
          id="arrow-2-3"
          marker-end="url(#arrowtail)"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="2"
        />
        <path
          fill="transparent"
          id="arrow-3-4"
          marker-end="url(#arrowtail)"
          marker-start="url(#arrowhead)"
          stroke="black"
          stroke-width="2"
        />
         
        <rect
          class="clickable"
          fill="transparent"
          id="rect-around-arrow-0-1"
        />
        <rect
          class="clickable"
          fill="transparent"
          id="rect-around-arrow-1-2"
        />
        <rect
          class="clickable"
          fill="transparent"
          id="rect-around-arrow-2-3"
        />
        <rect
          class="clickable"
          fill="transparent"
          id="rect-around-arrow-3-4"
        />
      </svg>
    </div>
  </div>
   
  <hr />
   
  <div
    class="interaction-container flex-item flex-row flex-center flex-stretch"
  >
    <undo-stub />
  </div>
</div>
`;
